Fixed survey sidebar misalignment

--- a/app/assets/stylesheets/application.css.less
+++ b/app/assets/stylesheets/application.css.less
@@ -1598,7 +1598,7 @@ td.action {
 // Questionnaire (survey) view //
 
 // jurisdiction select at the top of the certificate
-header .jurisdiction{  
+header .jurisdiction{
   font-size: 14px;
   a {
     cursor: pointer;
@@ -2184,7 +2184,7 @@ header .jurisdiction{
 
   &.affix, &.affix-bottom{
     position: fixed;
-    top:130px;
+    top: 105px;
   }
 
   #panel_handle{
@@ -2843,7 +2843,7 @@ width: 328px;
 
 p.data {
   text-align: right;
-  
+
   .badge {
     font-size: 0.9em;
     padding: 2px 9px 3px 9px;
